2007-08-09  Christian Persch  <chpe@gnome.org>

	* data/icons/Makefile.am:

	Fix icon cache update command.

2007-08-09  Christian Persch  <chpe@gnome.org>

	* data/icons/Makefile.am:
	* data/icons/HighColorLargePrint{,Inverse}_apps_48x48_gnome-web-browser.png:

	Add a11y theme icons for our apps icon.

2007-08-09  Christian Persch  <chpe@gnome.org>

	* configure.ac:
	A data/icons/*:
	R data/icons/*/*/*:

	Reorganise icons.

2007-08-06  Christian Persch  <chpe@gnome.org>

	* data/bme.desktop.in.in:
	* data/epiphany.desktop.in.in:

	Direct bugs coming in from bb to their own Component, for easy
	filtering.

2007-08-06  Diego Escalante Urrelo  <diegoe@gnome.org>

	* embed/ephy-history.c:
	* embed/ephy-history.h:

	Make ephy_history_set_enabled actually disable history and not delete
	it. Also make it public.

2007-08-02  Diego Escalante Urrelo  <diegoe@gnome.org>

	* data/ui/epiphany-ui.xml:
	* src/ephy-window.c:
	* src/ephy-lockdown.c:

	Remove "Add bookmark" and "Save as" from the document context menu.
	Patch by Cosimo Cecchi. Part of bug #332968.

2007-08-01  Diego Escalante Urrelo  <diegoe@gnome.org>

	* src/ephy-completion-model.c:
	* embed/ephy-history.c:

	Fix completion model to show icons for history items too,
	istory/bookmarks/favicon_cache service objects are now stored in the
	completion priv. Patch by Imran Patel. Fixes bug #459811.

2007-08-01  Diego Escalante Urrelo  <diegoe@gnome.org>

	* data/epiphany-lockdown.schemas.in:

	Remove misleading text from hide menu bar lockdown. Fixes bug #321989.

2007-07-30  Diego Escalante Urrelo  <diegoe@gnome.org>

	* embed/ephy-embed.c:

	Add a missing space in ge_content_change description.

2007-07-30  Diego Escalante Urrelo  <diegoe@gnome.org>

	* lib/ephy-file-helpers.c:

	Remove an unused variable. One-liner by Cosimo Cecchi.
	Part of Bug #433173.

2007-07-31  Xan Lopez  <xan@gnome.org>

	* embed/mozilla/mozilla-embed-single.cpp:
	* embed/webkit/webkit-embed-single.cpp:
