@@ -2,6 +2,12 @@
 
 	* data/icons/Makefile.am:
 
+	Fix icons install paths.
+
+2007-08-09  Christian Persch  <chpe@gnome.org>
+
+	* data/icons/Makefile.am:
+
 	Fix icon cache update command.
 
 2007-08-09  Christian Persch  <chpe@gnome.org>
